--- a/www/features/main_sumary.html
+++ b/www/features/main_sumary.html
@@ -2,17 +2,29 @@
     <ion-content scroll="false" style="padding:0px;">
         <div class="itab">
             <ul class="itab-title">
-                <li ng-class="{'tab-noactive': selectedTab!=1}" ng-click="selectedTab=1">Lịch sử</li>
-                <li ng-class="{'tab-noactive': selectedTab!=2}" ng-click="selectedTab=2">Thu nhập</li>
-                <li ng-class="{'tab-noactive': selectedTab!=3}" ng-click="selectedTab=3">Năng suất</li>
+                <li ng-class="{'tab-noactive': selectedTab!=1}" ng-click="SelectTab(1)">Lịch sử</li>
+                <li ng-class="{'tab-noactive': selectedTab!=2}" ng-click="SelectTab(2)">Thu nhập</li>
+                <li ng-class="{'tab-noactive': selectedTab!=3}" ng-click="SelectTab(3)">Năng suất</li>
             </ul>
             <ul class="itab-footer">
-                <li ng-class="{ 'tab-active': selectedTab==1}" ng-click="selectedTab=1"></li>
-                <li ng-class="{ 'tab-active': selectedTab==2}" ng-click="selectedTab=2"></li>
-                <li ng-class="{ 'tab-active': selectedTab==3}" ng-click="selectedTab=3"></li>
+                <li ng-class="{ 'tab-active': selectedTab==1}" ng-click="SelectTab(1)"></li>
+                <li ng-class="{ 'tab-active': selectedTab==2}" ng-click="SelectTab(2)"></li>
+                <li ng-class="{ 'tab-active': selectedTab==3}" ng-click="SelectTab(3)"></li>
             </ul>
             <div ng-show="selectedTab==1">
+                <div class="div-empty h10p bgr-grey"></div>
+                <div class="dpt">
+                    <div>
+                        <input style="float:left;" ng-model="HSearch.dSFrom" type="date">
+                        <input style="float:right;" ng-model="HSearch.dSTo" type="date">
+                        <div style="clear:both;"></div>
+                    </div>
+                </div>
+                <div class="div-empty h10p bgr-grey"></div>
                 <ion-scroll style="height:100vh">
+                    <ion-refresher pulling-text="{{PullText}}"
+                                   on-refresh="LoadData()">
+                    </ion-refresher>
                     <div class="master" ng-repeat="o in HistoryList">
                         <div class="master-header">
                             <div style="height:42px;width:42px;background-image:url('img/pcon.png');background-size: 42px 42px;padding: 4px 0px 0px 2px;" ><img src="img/ico_truck.png" /></div>
@@ -31,14 +43,19 @@
                             <div style="width:50%;opacity:0.7"><div>Xem chi tiết</div></div>
                         </div>
                     </div>
+                    <div class="div-empty h110p"></div>
                 </ion-scroll>
             </div>
             <div ng-show="selectedTab==2">
                 <ion-scroll style="height:100vh">
+                    <div class="div-empty h10p bgr-grey"></div>
+                    <ion-refresher pulling-text="{{PullText}}"
+                                   on-refresh="LoadData()">
+                    </ion-refresher>
                     <div class="div-empty h25p"></div>
                     <div style="text-align:center;font-size:16px;color:#656c6f;">Thu nhập tháng</div>
                     <div style="height:210px">
-                        <div style="height:200px;" id="salaryChart" ui-chart="salaryData" chart-options="SalaryChartOpts"></div>
+                        <div style="height:200px;" id="salaryChart" ></div>
                     </div>
                     <div class="lengend">
                         <div class="lengend-row">
@@ -76,7 +93,16 @@
                 </ion-scroll>
             </div>
             <div ng-show="selectedTab==3">
-                <div id="chart" ui-chart="someData" chart-options="myChartOpts"></div>
+                <div class="div-empty h10p bgr-grey"></div>
+                <div style="height:250px;" id="chart"></div>
+                <div class="lengend">
+                    <div class="lengend-row">
+                        <div class="lengend-cell"><div class="lengend-rec bgr-seagreen"></div> Chuyến thành công</div>
+                    </div>
+                    <div class="lengend-row">
+                        <div class="lengend-cell"><div class="lengend-rec bgr-radicalred"></div> Chuyến thất bại</div>
+                    </div>
+                </div>
             </div>
         </div>
     </ion-content>
